Added previous chain checks to force a previous chain